--- a/about.html
+++ b/about.html
@@ -38,9 +38,9 @@
                     <li class="nav-item">
                         <a class="nav-link" href="contact.html">contactus</a>
                     </li>
-<!--                     <li class="nav-item">
-                        <a class="nav-link" href="https://rzp.io/l/HmkQJjx">Payment</a>
-                    </li> -->
+                    <li class="nav-item">
+                        <a class="nav-link" href="https://rzp.io/i/2OF54Q0Rwm">Payment</a>
+                    </li>
 
                 </ul>
 
