--- a/contact.html
+++ b/contact.html
@@ -42,7 +42,7 @@
                         <a class="nav-link active" href="contact.html">contactus</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="https://rzp.io/l/HmkQJjx">Payment</a>
+                        <a class="nav-link" href="https://rzp.io/i/2OF54Q0Rwm">Payment</a>
                     </li>
 
                 </ul>
