--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                         <a class="nav-link" href="contact.html">contactus</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="https://rzp.io/i/2OF54Q0Rwm">Payment</a>
+                        <a  target="_blank" class="nav-link" href="https://rzp.io/i/2OF54Q0Rwm">Payment</a>
                     </li>
 
                 </ul>
