--- a/index.html
+++ b/index.html
@@ -212,9 +212,8 @@
         <div class="row featurette d-flex justify-content-center align-items-center">
             <div class="col-md-7">
                 <h2 class="featurette-heading">Build Perfect body<br> with us<span class="text-muted"></span></h2>
-                <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum error unde hic laborum
-                    repudiandae, enim, reprehenderit obcaecati assumenda natus totam suscipit autem, saepe molestias.
-                    Aspernatur dolorum cupiditate laborum ab recusandae.</p>
+                <p class="lead">This article is not meant to be a comprehensive guide to body recomposition, but rather a launching point for those of you looking to make changes. Before we get started, please note that if you have any questions you can post them in the comments section below
+                    A perfect body is one that not only looks good, but also is healthy and in shape. You should be able to handle your own inside the gym and out. What good is it to look amazing if you don't have the stamina and health to go on a long hike, run a mile, play a sport or perform with exhilarating endurance in the bedroom..</p>
             </div>
             <div class="col-md-5">
                 <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500"
