--- a/about.html
+++ b/about.html
@@ -56,9 +56,9 @@
         <div class="row featurette d-flex justify-content-center align-items-center">
             <div class="col-md-7">
                 <h2 class="featurette-heading">Best Training <span class="text-muted"></span></h2>
-                <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum error unde hic laborum
-                    repudiandae, enim, reprehenderit obcaecati assumenda natus totam suscipit autem, saepe molestias.
-                    Aspernatur dolorum cupiditate laborum ab recusandae.</p>
+                <p class="lead">I was never into bodybuilding and never imagined myself doing it. I got into weight training for the reason of gaining weight to wrestle for the Rider University wrestling team. I came into college weighing only 110 lbs and needed to get to 125 lbs.
+
+I began weight training and started to see results and at that time, bodybuilding was still not a thought in my mind. A guy that trained at my gym, who was a competitive bodybuilder, noticed my gains and told me that I would do well in bodybuilding.</p>
             </div>
             <div class="col-md-5">
                 <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500"
@@ -72,10 +72,7 @@
         <div class="row featurette d-flex justify-content-center align-items-center">
             <div class="col-md-7 order-md-2">
                 <h2 class="featurette-heading"> Free Consultation<span class="text-muted"></span></h2>
-                <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias, quo odit nesciunt at
-                    voluptates illum,
-                    saepe deserunt dolorum, molestiae aperiam sit a quis nisi
-                    repellat vitae corporis officiis tempore omnis.</p>
+                <p class="lead">Whey is a "complete" protein, meaning it contains all the essential amino acids that the human body requires for proper repair and function.  Whey protein is also a rich source of the branched chain amino acids, L-Leucine, L-Isoleucine and L-Valine.  This high-quality source of protein naturally found in dairy, is commonly marketed and ingested as a dietary supplement, was once considered a useless by product of cheese manufacturing.</p>
             </div>
             <div class="col-md-5">
                 <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500"
@@ -90,9 +87,11 @@
         <div class="row featurette d-flex justify-content-center align-items-center">
             <div class="col-md-7">
                 <h2 class="featurette-heading">Build Perfect Body <span class="text-muted"></span></h2>
-                <p class="lead">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aut hic delectus quaerat nulla
-                    laudantium nisi nesciunt possimus quibusdam iure earum distinctio, accusamus ab ad ducimus, et
-                    placeat a molestias consequuntur?</p>
+                <p class="lead">Many bodybuilding greats (including the likes of Arnold Schwarzenegger and Steve Reeves) used them to build the foundation of their lean muscle mass.
+
+The reason for their effectiveness is they allow you to train hard and only 3 days a week. This type of programming allows most to optimally recover between training sessions.
+
+They’re perfect for any experience level. Beginners will thrive when using full body workouts. Intermediates will continue to notice progress towards their goals. And advanced lifters will be able to maintain their size and slowly build upon their established foundation.</p>
             </div>
             <div class="col-md-5">
                 <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500"
