--- a/services.html
+++ b/services.html
@@ -65,9 +65,7 @@
             <img src="assets/k.jpg" class="card-img-top" alt="...">
             <div class="card-body">
                 <h5 class="card-title">Strength Training Equipment</h5>
-                <p class="card-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Modi magnam velit natus
-                    recusandae soluta possimus? Nam vero natus, quam, fugiat optio earum esse hic, tenetur doloribus est
-                    aut sunt a totam dolore corrupti fugit.</p>
+                <p class="card-text">I’ll go out on a limb and guess the reason you visit Muscle and Strength is to build lean muscle, get stronger and possibly add a little functionality to your life. I also bet you are constantly on the hunt for better, more effective ways of training to pack on said muscle.</p>
                 <p class="card-text"><small class="text-muted"></small></p>
             </div>
         </div>
@@ -75,9 +73,9 @@
             <img src="assets/5.jpg" class="card-img-top" alt="...">
             <div class="card-body">
                 <h5 class="card-title">Group Fitness Class</h5>
-                <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque praesentium
-                    voluptate architecto, eligendi magnam vero? Omnis, harum. At facilis quasi, facere a ipsum illo sunt
-                    voluptates corporis assumenda amet nemo iure perspiciatis nisi quisquam!</p>
+                <p class="card-text">The one thing that I love the most about figure and competing is the fact that you are able to show your true strength as far as the dedication that it takes to actually get on stage and compete. The feeling of getting on stage with hopes of winning can be overwhelming but yet rewarding in the end.
+
+</p>
                 <p class="card-text"><small class="text-muted"></small></p>
             </div>
         </div>
@@ -85,9 +83,9 @@
             <img src="assets/h.jpg" class="card-img-top" alt="...">
             <div class="card-body">
                 <h5 class="card-title">Cardiovascular Equipment</h5>
-                <p class="card-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Magni voluptatibus rerum
-                    et natus quos ex, accusamus, quidem dolores similique reiciendis magnam animi. Eaque, animi
-                    distinctio qui odio aut quia repudiandae cupiditate quis in dolorum.</p>
+                <p class="card-text">MetCon is simply short for metabolic conditioning. This general term has recently separated itself from the old, tried-and-true steady-state cardiovascular form of exercise such as distance running or long sessions on the elliptical and has been more aptly assigned to more challenging and dynamic sessions of interval-style training.
+
+</p>
                 <p class="card-text"><small class="text-muted"></small></p>
             </div>
         </div>
