--- a/about.html
+++ b/about.html
@@ -39,7 +39,8 @@
                         <a class="nav-link" href="contact.html">contactus</a>
                     </li>
                     <li class="nav-item">
-                        <a  target="_blank" class="nav-link" href="https://rzp.io/i/2OF54Q0Rwm">Payment</a>
+                        <a  target="_blank" class="nav-link" href="https://rzp.io/l/7dl1ZHuVAL">Payment</a>
+                        
                     </li>
 
                 </ul>
